# raspberry

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  THEORY.MD  autodev.md  botcoin-parser.py  botcoin-parser2.py  botcoin-parser3.py  botcoin_q4.py  botcoin_q4_growths.py  botcoin_q8.py  botcoin_q8_fix.py  botcoin_solver4.py  botcoin_solver5.py  checkpoint.json  de_parser.py  dump_all.py  gen_payload.py  gen_payload2.py  gen_payload3.py  graph.fabro  growth_parser.py  growth_solver.py  install.sh  manifest.json  sandbox.json  solve.py  solver.py  solver_vol.py
.config/: nextest.toml
artifacts/: command.stderr.json
docker/: Dockerfile
docs/: docs.json  logging-strategy.md  rpi-edge-case-tests.md
genesis/: ASSESSMENT.md  DESIGN.md  GENESIS-REPORT.md  PLANS.md  SPEC.md
lib/crates/arc-db/: Cargo.toml
lib/crates/arc-db/src/: workflow_run.rs
lib/crates/fabro-synthesis/: Cargo.toml
lib/crates/fabro-synthesis/data/: lane_sizing_pattern.txt
lib/crates/fabro-synthesis/src/: blueprint.rs  error.rs  lib.rs  planning.rs  render.rs
lib/crates/fabro-synthesis/tests/: bootstrap.rs  bootstrap_verify.rs  greenfield_rust.rs  render_regression.rs  synthesis.rs
lib/crates/fabro-synthesis/tests/fixtures/bootstrap-verify/: blueprint.yaml
lib/crates/raspberry-cli/: Cargo.toml  build.rs
lib/crates/raspberry-cli/src/: main.rs
lib/crates/raspberry-cli/tests/: cli.rs
lib/crates/raspberry-supervisor/: Cargo.toml
lib/crates/raspberry-supervisor/src/: autodev.rs  controller_lease.rs  dispatch.rs  evaluate.rs  failure.rs  integration.rs  lib.rs  maintenance.rs  manifest.rs  plan_cutover.rs  plan_registry.rs  plan_status.rs  portfolio_scheduler.rs  program_state.rs  resource_lease.rs
lib/crates/raspberry-supervisor/tests/: autodev_cycle.rs  integration_tests.rs
lib/crates/raspberry-tui/: Cargo.toml
lib/crates/raspberry-tui/src/: app.rs  files.rs  keys.rs  layout.rs  lib.rs  narration.rs  render.rs  runs.rs
lib/crates/raspberry-tui/tests/: observer.rs
openapi/: arc-api.yaml
plans/: 031826-bootstrap-raspberry-supervisory-plane.md  031826-port-and-generalize-fabro-dispatch-for-myosu.md  031926-build-raspberry-autodev-orchestrator.md  031926-build-skill-guided-program-synthesis.md  031926-extend-fabro-create-workflow-for-raspberry.md  031926-harden-autonomy-and-direct-trunk-integration.md  031926-implement-raspberry-run-observer-tui.md  032026-harden-run-reliability-from-myosu-rxmrbro-zend.md  032026-keep-fabro-and-raspberry-continuously-generating-work.md  032026-sync-paperclip-with-raspberry-frontiers.md  032126-eng-review-brief.md  032126-plan-first-autodev-redesign.md  032326-autodev-efficiency-and-harness-engineering.md  032326-centralize-provider-policy-and-live-autodev-recovery.md  032426-greenfield-bootstrapping-and-code-quality.md  032426-harness-redesign-sprint-contracts-and-evaluation.md  032426-integration-verification-and-codebase-polish.md  032526-e2e-autodev-review-and-remediation.md  032526-parent-holistic-review-shipping-gauntlet.md  032526-plan-level-adversarial-review-and-recursive-improvement.md  032626-live-fabro-autodev-remediation.md  032626-structural-remediation-from-landed-code-review.md  032726-lane-gate-scope-hardening.md  032726-post-rxmrbro-audit-note.md  032726-post-rxmrbro-systems-hardening.md  032826-comprehensive-root-cause-remediation.md  032826-harness-quality-gates-and-baseline-repair.md
(+3719 files in other folders)
