[package]
name = "raspberry-cli"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Raspberry supervisory CLI layered on Fabro"

[[bin]]
name = "raspberry"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
raspberry-supervisor = { path = "../raspberry-supervisor" }
raspberry-tui = { path = "../raspberry-tui" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
